content spilling over container boundary issue fixed

--- a/style.css
+++ b/style.css
@@ -91,11 +91,12 @@ button {
 }
 
 .books-container {
-    display: flex;
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-area: 2 / 2 / 3 / 2;
 }
 
-.books {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-}
+/* .books {
+    
+} */
